# mew

./: .dockerignore  .gitignore  Dockerfile.proof  LICENSE  PASSIVE_PROOF.md  PASSIVE_SURFACES.md  README.md  ROADMAP.md  ROADMAP_STATUS.md  SIDE_PROJECTS.md  SIDE_PROJECT_ROADMAP.md  SIDE_PROJECT_ROADMAP_STATUS.md  WHY_MEW.md  mew  prd.md  pyproject.toml
.harbor/: mew_terminal_bench_agent.py
docs/: ADOPT_FROM_REFERENCES.md  APPLICATION_EVIDENCE_INDEX.md  COCKPIT_REFERENCE_NOTES.md  DESIGN_2026-04-24_M6_12_FAILURE_SCIENCE_INSTRUMENTATION.md  DESIGN_2026-04-25_M6_13_DELIBERATION_LANE.md  DESIGN_2026-04-26_RESIDENT_LANE_ARCHITECTURE.md  DESIGN_2026-04-29_M6_24_FINAL_VERIFIER_STATE_TRANSFER.md  DESIGN_2026-04-29_M6_24_HARD_RUNTIME_VERIFIER_STRATEGY.md  DESIGN_2026-04-29_M6_24_HARD_TASK_CONTRACT_CAPSULE.md  DESIGN_2026-04-29_M6_24_HARD_TASK_PROFILE_V0.md  DESIGN_2026-04-29_M6_24_MODEL_INFERENCE_OUTPUT_CONTRACT.md  DESIGN_2026-04-29_M6_24_RUNTIME_ARTIFACT_FRESHNESS.md  DESIGN_2026-04-30_M6_24_SYSTEM_SERVICE_STATE_CONTRACT.md  DESIGN_2026-05-01_M6_24_LONG_BUILD_SUBSTRATE.md  DESIGN_2026-05-02_M6_24_LONG_COMMAND_CONTINUATION.md  DESIGN_2026-05-03_M6_24_EXECUTION_CONTRACT.md  DESIGN_2026-05-03_M6_24_GENERIC_MANAGED_EXEC.md  DESIGN_2026-05-05_M6_23_2_IMPLEMENT_V2_NATIVE_TOOL_LOOP.md  DESIGN_2026-05-05_M6_23_2_LANE_ISOLATION_SUBSTRATE.md  DESIGN_2026-05-05_M6_24_ACTIVE_COMPATIBILITY_FRONTIER.md  DESIGN_2026-05-06_M6_24_EXPECTED_ARTIFACT_CONTRACT.md  DESIGN_2026-05-06_M6_24_IMPLEMENT_V2_TOOL_CONTRACT_AND_FRONTIER_STATE.md  DESIGN_2026-05-07_M6_24_INTEGRATION_OBSERVABILITY.md  (+444 more)
(+425 files in other folders)
