[project]
name = "mew"
version = "0.1.0"
description = "Passive AI task agent CLI prototype."
readme = "prd.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mew = "mew.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mew"]
