[project]
name = "mew"
version = "0.1.0"
description = "Passive AI task agent CLI prototype."
readme = "prd.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-testmon>=2.1",
    "ruff>=0.11",
]

[project.scripts]
mew = "mew.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--testmon"]

[tool.ruff]
target-version = "py39"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mew"]
